--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<!-- Responsive navbar -->
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</a>
-					<h1 class="brand"><a href="index.html">Muhammad Shahid</a></h1>
+					<h1 class="text-responsive"><a href="index.html">Muhammad Shahid</a></h1>
 					<!-- navigation -->
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
@@ -60,12 +60,12 @@
 							<ul class="slides">
 								<li>
 									<p class="home-slide-content">
-										<strong style="color:black">Hello</strong> Welcome
+										<strong style="color:black; font-size:3vw; ">Hello</strong> Welcome
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										 <strong style="color: black;">I am a web developper</strong>
+										 <strong style="color: black; font-size:5vw;">I am a web developper</strong>
 									</p>
 								</li>
 								<li>
