index.html changed

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 						<li><a href="https://www.instagram.com"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
 						<li><a href="https://www.twitter.com"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
 						<li><a href="https://www.google.com"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
-						<li><a href="https://www.facebook.com"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
+						<li><a href="https://https://pinterest.com/"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
 					
 						</ul>
 					
