cahange page.html

--- a/page.html
+++ b/page.html
@@ -205,7 +205,7 @@
 						<i class="fa fa-youtube" aria-hidden="true"></i>
 						<li><a href="https://twitter.com/"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
 						<li><a href="https://www.google.com"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
-						<li><a href="https://www.facebook.com"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
+						<li><a href="https://https://pinterest.com/"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
 					</ul>
 					<p class="copyright">
 						&copy; copyright 2021-2022
