--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<li>
 
 									<p class="">
-										<strong style="color:black; font-size:3vw; ">Hello</strong>Welcome
+										<strong style="color:black; font: size 3em; ">Hello</strong>
 									</p>
 								</li>
 								<li>
